# SiCKL

./: LICENSE  README.md
code/: CMakeLists.txt
code/EasyBMP/: CMakeLists.txt
code/Mandelbrot/: Main.cpp  Mandelbrot.pro
code/Ruff/: ruff.h
code/Ruff/ruff/: assert.h  error.h  platform.h  utilities.h
code/SiCKL/: SiCKL.pro
code/SiCKL/include/: AST.h  Common.h  Compiler.h  Declares.h  Defines.h  DeviceBuffer.h  Enums.h  HostBuffer.h  KernelBuffers.h  KernelConstructs.h  KernelFunctions.h  KernelTypes.h  Program.h  Runtime.h  SiCKL.h  SiCKLUndef.h  Source.h
code/SiCKL/source/: AST.cpp  Compiler.cpp  KernelConstructs.cpp  KernelFunctions.cpp  KernelTypes.cpp  Program.cpp  Runtime.cpp  Source.cpp
code/Spark/: Spark.pro  main.cpp  swizzle.py
code/Spark/include/: spark.h
code/Spark/include/internal/: comment.h  common.h  enums.h  error.h  functions.h  kernel.h  node.h  range.h  statement.h  types.h
code/Spark/include/spark/: buffer.h  codegen.h  comment.h  common.h  constructors.h  device_buffer.h  enums.h  error.h  functions.h  kernel.h  lvalue.h  meta.h  node.h  platform.h  pointer.h  properties.h  range.h  runtime.h  rvalue.h  scalar.h  statement.h  types.h  utilities.h  vector2.h  vector4.h  void.h
code/Spark/source/: CMakeLists.txt  codegen.hpp  codegen.opencl.cpp  codegen.tree.cpp  enums.cpp  error.cpp  error.hpp  node.cpp  node.hpp  node.text.cpp  precomp.h  resource.hpp  runtime.cpp  runtime.hpp  spark.hpp  text_utilities.cpp  text_utilities.hpp
code/SparkTest/: CMakeLists.txt
code/SparkTest/code/: CMakeLists.txt
code/SparkTest/source/: CMakeLists.txt  main.cpp
code/Thistle/include/: thistle.h
code/Thistle/source/: CMakeLists.txt  computation_node.h  linear_transform_node.cpp  linear_transform_node.h  thistle.cpp  thistle.hpp  thistle_buffer.cpp  thistle_buffer.hpp  thistle_error.cpp  thistle_error.hpp  thistle_label_node.cpp  thistle_label_node.hpp  thistle_linear_transform_node.cpp  thistle_linear_transform_node.hpp  thistle_node.cpp  thistle_node.hpp  thistle_parameter_updater.cpp  thistle_parameter_updater.hpp  thistle_sample_batch.cpp  thistle_sample_batch.hpp  thistle_sgd_parameter_updater.cpp  thistle_sgd_parameter_updater.hpp
code/ThistleTest/source/: CMakeLists.txt  main.cpp
